--- a/tv_project/src/components/Header.css
+++ b/tv_project/src/components/Header.css
@@ -2,10 +2,13 @@
 	position: absolute;
 	height: 70px;
 	background-color: black;
-	top: 0px;
+	top: 0;
 	left: 0;
 	right: 0;
+    padding: 0 10px;
 	color: white;
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
+    align-items: center;
 }
+
