--- a/tv_project/src/components/Footer.css
+++ b/tv_project/src/components/Footer.css
@@ -6,7 +6,8 @@
 	left: 0;
 	right: 0;
 	color: white;
+	padding:0 20px;
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
 }
