--- a/tv_project/src/components/SearchBar.css
+++ b/tv_project/src/components/SearchBar.css
@@ -1,4 +1,7 @@
 .searchbar{
     height:30px;
     background-color:lightgray;
+    display: flex;
+    align-items: center;
+    padding:0 20px;
 }
