--- a/tv_project/src/components/Footer.css
+++ b/tv_project/src/components/Footer.css
@@ -8,6 +8,6 @@
 	color: white;
 	padding:0 20px;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
 }
