--- a/tv_project/src/components/SearchBar.css
+++ b/tv_project/src/components/SearchBar.css
@@ -3,6 +3,20 @@
     height:30px;
     background-color:lightgray;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     padding: 5px;
+}
+
+.search{
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.dropdown{
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    padding-right: 10px;
 }
